重命名中文文件，删除可执行文件

--- a/src/views/MyProjects.html
+++ b/src/views/MyProjects.html
@@ -16,14 +16,14 @@
 
 	<div class="menu">
 		<div class="label">
-			<img src="../static/img/椭圆1.png" style="height:30px; width:30px; padding-left: 40px; padding-top:5px;" />
+			<img src="../static/img/coin-logo1.png" style="height:30px; width:30px; padding-left: 40px; padding-top:5px;" />
 			<font color="#0066CC">KCOIN</font>
 		</div>
 		<img class="headshot" src="../static/img/tx1.png">
 		<div class="nickname" style="text-align: center">Darkone.</div>
 		<div class="item" style="text-align: center">
-			<img src="../static/img/图层4.png" style="width: 30px; height: 30px;"> 个人中心<br><br>
-			<img src="../static/img/图层5.png" style="width: 30px; height: 30px;"> 项目列表<br><br>
+			<img src="../static/img/layer4.png" style="width: 30px; height: 30px;"> 个人中心<br><br>
+			<img src="../static/img/layer5.png" style="width: 30px; height: 30px;"> 项目列表<br><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;退出登录<br>
 		</div>
 	</div>
