add pictures and link,and then changed the css style

--- a/src/static/css/personalPage.css
+++ b/src/static/css/personalPage.css
@@ -34,7 +34,7 @@ ul {
 }
 
 .mainInterface{
-    background-color: rgb(208, 219, 219);
+    background-color: #FFFFFF;
     position: relative;
     float: left;
     width: 80%;
