--- a/src/views/personalPage.html
+++ b/src/views/personalPage.html
@@ -9,8 +9,8 @@
     <div id="container">
         <div class="left-nav">
             <div class="banner">
-                <a href="./index.html">
-                    <img src="../static/img/椭圆 1.png" style="vertical-align: middle;" width="28" height='28' />
+                <a href="./homepage">
+                    <img src="../static/img/kcoin-logo-blue.png" style="vertical-align: middle;" width="28" height='28' />
                     <b>KCOIN</b>
                 </a>
             </div>
@@ -23,10 +23,10 @@
                 <ul>
                     <!--左侧导航栏按钮的底色在这里设置-->
                     <li><a id="personalCenter" href="#" style="background-color: rgb(208, 219, 219);">
-                        <img src="../static/img/图层 4.png" style="vertical-align: middle;" width="24" height="24"/>
+                        <img src="../static/img/list-star.png" style="vertical-align: middle;" width="24" height="24"/>
                         个人中心</a></li>
                     <li><a href="./myProject.html">
-                        <img src="../static/img/图层 5.png" style="vertical-align: middle;" width="24" height="24"/>
+                        <img src="../static/img/list-rocket.png" style="vertical-align: middle;" width="24" height="24"/>
                         我的项目</a></li>
                     <li><a href="#" >退出登录</a></li>
                 </ul>
