--- a/src/views/login.html
+++ b/src/views/login.html
@@ -61,9 +61,9 @@
                 </div>
             </div>
         </div>
-        <script src="js/EasePack.min.js"></script>
-        <script src="js/TweenLite.min.js"></script>
-        <script src="js/helloweb.js"></script>
+        <script src="../static/js/EasePack.min.js"></script>
+        <script src="../static/js/TweenLite.min.js"></script>
+        <script src="../static/js/helloweb.js"></script>
     </body>
 </html>
 
