--- a/src/views/join.html
+++ b/src/views/join.html
@@ -63,8 +63,8 @@
                 </div>
             </div>  
         </div> 
-        <script src="js/EasePack.min.js"></script>
-        <script src="js/TweenLite.min.js"></script>
-        <script src="js/helloweb.js"></script>
+        <script src="../static/js/EasePack.min.js"></script>
+        <script src="../static/js/TweenLite.min.js"></script>
+        <script src="../static/js/helloweb.js"></script>
     </body>
 </html>
