--- a/src/views/personalPage.html
+++ b/src/views/personalPage.html
@@ -22,7 +22,7 @@
             <div class="list">
                 <ul>
                     <!--左侧导航栏按钮的底色在这里设置-->
-                    <li><a id="personalCenter" href="#" style="background-color: rgb(208, 219, 219);">
+                    <li><a href="#" style="background-color: rgb(208, 219, 219);">
                         <img src="../static/img/list-star.png" style="vertical-align: middle;" width="24" height="24"/>
                         个人中心</a></li>
                     <li><a href="./myProject.html">
