--- a/src/views/join.html
+++ b/src/views/join.html
@@ -56,7 +56,7 @@
                                 <img class="github-icon" src="../static/img/github-icon.png">
                                 <a  class="bottom-dark" style="position: relative;left: 24px;top:1px;
                                 text-decoration: none;color: aliceblue;font-size: 14px;" 
-                                href="http://kcoin.kaiyuanshe.cn/auth/github/login">使用 GitHub 账号登录</a>
+                                href="https://github.com/login/oauth/authorize?client_id=c698bd09d35414343da4">使用 GitHub 账号登录</a>
                             </div>
                         </div>
                     </form>
