--- a/src/views/personalPage.html
+++ b/src/views/personalPage.html
@@ -22,20 +22,22 @@
             <div class="list">
                 <ul>
                     <!--左侧导航栏按钮的底色在这里设置-->
-                    <li><a id="personalCenter" href="#" style="background-color: rgb(208, 219, 219);">
+                    <li><a id="personalCenter" href="#" style="background-color: #FFFFFF;">
                         <img src="../static/img/list-star.png" style="vertical-align: middle;" width="24" height="24"/>
                         个人中心</a></li>
                     <li><a href="./myProject.html">
                         <img src="../static/img/list-rocket.png" style="vertical-align: middle;" width="24" height="24"/>
                         我的项目</a></li>
-                    <li><a href="#" >退出登录</a></li>
+                    <li><a href="./homepage" >退出登录</a></li>
                 </ul>
             </div>
         </div>
         <!--右边界面背景色的设置在css中mainInterface里-->
         <div class="mainInterface">
             <div class="money">
-                <img src="../static/img/kcoin-project-list-half-icon.png" width="150" height="150" />
+                <img src="../static/img/kcoin-project-list-half-icon.png" width="150" height="150" style="position: absolute;"/>
+                Kcoin<br />
+                100,000
             </div>
             <div class="record">
                 Kcoin记录
