change button's CSS

--- a/src/static/css/homepage.css
+++ b/src/static/css/homepage.css
@@ -86,6 +86,9 @@ body {
 	text-decoration: none;
 	text-align: center;
 }
+.head > .login-bt:hover{
+	background: #04e7ff;
+}
 .container {
 	width: 100%;
 	text-align: center;
