“修改homepage实现到pernalPage跳转”

--- a/src/static/css/homepage.css
+++ b/src/static/css/homepage.css
@@ -89,7 +89,7 @@ body {
 .head > .login-bt:hover {
 	background: #04e7ff;
 }
-.head > .login-headshot {
+.head > a > .login-headshot {
 	position: relative;
 	float: right;
 	margin-right: 15px;
