fixes #72 实现退出登陆的controller

--- a/src/views/personalPage.html
+++ b/src/views/personalPage.html
@@ -28,7 +28,7 @@
                     <li><a href="./personalprojects">   <!--修改此处超链接，使其指向新提交的个人项目页面。-->
                         <img src="../static/img/list-rocket.png" style="vertical-align: middle;" width="24" height="24"/>
                         我的项目</a></li>
-                    <li><a href="./homepage" >退出登录</a></li>
+                    <li><a href="./logout" >退出登录</a></li>
                 </ul>
             </div>
         </div>
