--- a/src/views/leftNav.html
+++ b/src/views/leftNav.html
@@ -32,7 +32,7 @@
                 <li><a id="personalProjectsLink" href="./personalprojects">  
                     <img src="../static/img/list-rocket.png" style="vertical-align: middle;" width="24" height="24"/>
                     我的项目</a></li>
-                <li><a href="./homepage" >退出登录</a></li>
+                <li><a href="./logout" >退出登录</a></li>
             </ul>
         </div>
 </body>
