--- a/src/views/personalProjects.html
+++ b/src/views/personalProjects.html
@@ -4,10 +4,11 @@
     <title>我的项目</title>
     <link rel="stylesheet" type="text/css" href="../static/css/personalProjects.css"/>
     <link rel="stylesheet" type="text/css" href="../static/css/personalPage.css"/>
+    <link rel="stylesheet" type="text/css" href="../static/css/import.css">
 </head>
 
-<body>
-    <div id="container">
+<body onload="hidePopup();">
+    <div id="container" style="position: absolute;">
         <div class="left-nav">
             {{template "./leftNav.html" .}}
         </div>
@@ -19,7 +20,7 @@
             <div class="addprojbar">
                 <div style="padding-left: 40px; padding-top: 25px; float: left;">我的项目列表(2)</div>
                 <div style="padding-right: 30px; padding-top: 25px; float: right; font-size: 25px;">
-                    <input type="button" style="width:125px; height:40px;" onclick="javascript:top.location='import.html';" value="添加项目">
+                    <input type="button" style="width:125px; height:40px;" onclick="showPopup();" value="添加项目">
                 </div>
             </div>
 
@@ -44,4 +45,52 @@
             </div>  
         </div>
     </div>
+
+    <div id="import" style="background:rgba(0,0,0,0.9);" >
+        <div class="main" style="background:rgba(255, 255, 255, 0.9)">
+            <h1>导入项目</h1>
+            <ul class="steps">
+                <li class="active">选择项目</li>
+                <li>初始信息</li>
+                <li>初始分配</li>
+            </ul>
+            <div class="content">
+            <form>
+            <input type="text" placeholder="快速导入: 请输入Github项目的URL">
+            </form>
+
+            <p>
+                <img class = "profile" src={{.user.Data.HeadShotUrl}} alt="profile" align="top">&nbsp
+                <span id="username">{{.user.Data.UserName}}</span>&nbsp
+                <span id ="userprojects">({{.memberList_len}}个项目)</span>
+            </p>
+            <ul class="projects">
+                {{with .user.Data}}
+                {{range .ProjectList}}
+                    <li>{{.ProjectName}}</li>
+                {{end}}
+                {{end}}
+            </ul>
+            </div>
+            <div id="statusbar"><button onclick="hidePopup();" style="width:100%;height:10%;font-size: 20px;">close this windows</button></div>
+        </div>
+    </div>
+
+    <script>
+        
+        function showPopup(){ 
+            var popUp = document.getElementById("import"); 
+            popUp.style.position= "absolute";
+            popUp.style.zIndex="100";
+            popUp.style.width = "100%"; 
+            popUp.style.height = "100%"; 
+            popUp.style.visibility = "visible"; 
+        } 
+        
+        function hidePopup(){ 
+            var popUp = document.getElementById("import"); 
+            popUp.style.visibility = "hidden"; 
+        } 
+        
+    </script>
 </body>
