创建了projectMemberList.html和相关文件，使用导入方式导入了上方导航栏

--- a/src/views/projectMemberList.html
+++ b/src/views/projectMemberList.html
@@ -2,13 +2,12 @@
 <head>
     <meta charset="UTF-8" />
     <title>个人中心</title>
-    <script type="text/javascript">
-		function changePersonalPageColor(){
-			document.getElementById("personalPageLink").style.backgroundColor = 'white';
-		}
-	</script>
+    
 </head>
 
 <body>
     {{template "./projectTopNav.html" .}}
+    <script type="text/javascript">
+		document.getElementById("prj-mem").style.backgroundColor = 'white';
+	</script>
 </body>
