--- a/src/views/projectTopNav.html
+++ b/src/views/projectTopNav.html
@@ -14,7 +14,7 @@
         <div class="prj-name">KCoin</div>
         <a class="first" id="prj-info">项目详情</a>
         <a>项目动态</a>
-        <a>项目成员</a>
+        <a id="prj-mem" href="./projectMemberList">项目成员</a>
         <a>项目设置</a>
     </div>
 </body>
