--- a/src/static/css/projectInfo.css
+++ b/src/static/css/projectInfo.css
@@ -1,6 +1,13 @@
 body {
     margin: 0;
 }
+
+a:link,a:visited,a:hover,a:active
+{
+    color: #1B1B1B;
+    text-decoration:none;
+}
+
 .head {
     position: relative;
     height: 70px;
@@ -43,8 +50,5 @@ body {
     padding-top: 5px;
     border-radius: 10px;
     font-size: 30px;
-}
-#prj-info {
-    background-color: #FFFFFF;
     height: 60px;
 }
