--- a/src/views/personalProjects.html
+++ b/src/views/personalProjects.html
@@ -46,9 +46,13 @@
         </div>
     </div>
 
-    <div id="import" style="background:rgba(0,0,0,0.9);" >
-        <div class="main" style="background:rgba(255, 255, 255, 0.9)">
-            <h1>导入项目</h1>
+    <div id="import" style="background:rgba(0,0,0,0.9);" onclick="hidePopup();" >
+        <!-- onClick="event.cancelBubble = true"   div嵌套div时，点击子级div不触发父级div点击事件。-->
+        <div class="main" style="background:rgba(255, 255, 255, 0.9)" onClick="event.cancelBubble = true">
+            <h1>导入项目
+                <img class="close-button" style="width:55.6px; height: 100%;position: relative;float:right;top:-5px" 
+                onclick="hidePopup();" src="../static/img/close.png"/>
+            </h1>
             <ul class="steps">
                 <li class="active">选择项目</li>
                 <li>初始信息</li>
@@ -72,7 +76,6 @@
                 {{end}}
             </ul>
             </div>
-            <div id="statusbar"><button onclick="hidePopup();" style="width:100%;height:10%;font-size: 20px;">close this windows</button></div>
         </div>
     </div>
 
