--- a/src/views/leftNav.html
+++ b/src/views/leftNav.html
@@ -20,7 +20,7 @@
             </a>
         </div>
         <div class="information">
-            <img src="{{.user.Data.HeadShotUrl}}" width="200" height="200"/>
+            <img src="{{.user.Data.HeadShotUrl}}" style="width:200;height:200;border-radius:50%;overflow:hidden"/>
             <br />
             <b>{{.user.Data.UserName}}</b>
         </div>
