fixes #65 add projectInfo page

--- a/src/views/projectTopNav.html
+++ b/src/views/projectTopNav.html
@@ -12,7 +12,7 @@
     <div class="navigation">
         <img src="../static/img/projectbg.png">
         <div class="prj-name">KCoin</div>
-        <a class="first" id="prj-info">项目详情</a>
+        <a class="first" id="prj-info" href="./projectInfo">项目详情</a>
         <a>项目动态</a>
         <a id="prj-mem" href="./projectMemberList">项目成员</a>
         <a>项目设置</a>
