--- a/src/views/projectInfo.html
+++ b/src/views/projectInfo.html
@@ -21,6 +21,30 @@
             margin-left: 46px;
             margin-right: 46px;
         }
+        .card-head {
+            height: 70px;
+            background-color: #bfbfbf;
+        }
+        .card-title {
+            display: inline-block;
+            vertical-align: bottom;
+            font-size: 25px;
+            height: 70px;
+            line-height: 70px;
+            text-align: center;
+            margin-left: 20px;
+        }
+        .card-value {
+            display: inline-block;
+            vertical-align: bottom;
+            font-size: 35px;
+            font-weight: bold;
+            color: #ff3600;
+            height: 70px;
+            line-height: 70px;
+            text-align: center;
+            margin-left: 300px;
+        }
     </style>
 </head>
 
@@ -32,10 +56,16 @@
 
     <div class="info-container">
         <div class="info-card">
-
+            <div class="card-head">
+                <div class="card-title">KCoin 总值</div>
+                <div class="card-value">0</div>
+            </div>
         </div>
         <div class="info-card">
-
+            <div class="card-head">
+                <div class="card-title">Token 总值</div>
+                <div class="card-value">0</div>
+            </div>
         </div>
 
     </div>
