fixes #65 update project card

--- a/src/views/projectInfo.html
+++ b/src/views/projectInfo.html
@@ -11,6 +11,7 @@
         }
         .info-card {
             display: inline-block;
+            vertical-align: top;
             border-style: solid;
             border-width: 4px;
             border-radius: 10px;
@@ -45,6 +46,16 @@
             text-align: center;
             margin-left: 300px;
         }
+        .record-label {
+            font-size: 15px;
+            text-align: center;
+            width: 100px;
+            height: 30px;
+            line-height: 30px;
+            margin: -15px auto;
+            background-color: #FFFFFF;
+            border-radius: 15px;
+        }
     </style>
 </head>
 
@@ -60,14 +71,15 @@
                 <div class="card-title">KCoin 总值</div>
                 <div class="card-value">0</div>
             </div>
+            <div class="record-label">发放记录</div>
         </div>
         <div class="info-card">
             <div class="card-head">
                 <div class="card-title">Token 总值</div>
                 <div class="card-value">0</div>
             </div>
+            <div class="record-label">发放记录</div>
         </div>
-
     </div>
 </body>
 </html>
