--- a/src/views/projectMemberList.html
+++ b/src/views/projectMemberList.html
@@ -2,12 +2,66 @@
 <head>
     <meta charset="UTF-8" />
     <title>项目信息</title>
-    
+    <style>
+        .memberListContainer{
+            background-color: blue;
+            margin: auto;
+            margin-top: 80px;
+            width: 1200px;
+            height: 300px;
+        }
+        .memberItem{
+            float:left;
+            width: 300px;
+            height: 125px;
+            background-color: green;
+        }
+        .pageList{
+            position: relative;
+            width: 100%;
+            height: 50px;
+            background-color: white;
+        }
+        .lookMore{
+            line-height: 50px;
+        }
+        .lookMore > p{
+            position: relative;
+            left: 92%;
+            color:cadetblue;
+        }
+    </style>
 </head>
 
 <body>
-    {{template "./projectTopNav.html" .}}
+        {{template "./projectTopNav.html" .}}
+    
     <script type="text/javascript">
 		document.getElementById("prj-mem").style.backgroundColor = 'white';
-	</script>
+    </script>
+    
+    <div class="memberListContainer">
+        <div class="pageList">
+            <div class="lookMore">
+                <p class="">查看更多</p>
+            </div>
+        </div>
+        <div class="memberItem">
+
+        </div>
+        <div class="memberItem">
+
+            </div>
+            <div class="memberItem">
+
+                </div>
+                <div class="memberItem">
+
+                    </div>
+                    <div class="memberItem">
+
+                        </div>
+        
+    </div>
+    {{template "./footer.html" .}}
 </body>
