--- a/src/views/projectMemberList.html
+++ b/src/views/projectMemberList.html
@@ -47,7 +47,7 @@
         {{template "./projectTopNav.html" .}}
     
     <script type="text/javascript">
-		document.getElementById("proj-mem").style.backgroundColor = 'white';
+		document.getElementById("prj-mem").style.backgroundColor = 'white';
     </script>
     
     <div class="memberListContainer">
