--- a/src/views/join.html
+++ b/src/views/join.html
@@ -14,7 +14,7 @@
         <div id="large-header" class="content">
             <canvas id="demo-canvas" style="z-index:1000;position:absolute"></canvas>
             <div class="father-div">
-                <div class=grid-join style="z-index:1001">
+                <div class= "grid-join">
                     <div class="logo-join">
                         <img src="../static/img/kcoin-log-big.png">
                     </div>
@@ -23,12 +23,12 @@
                     </div>
                     <form action="https://www.bilibili.com/">
                         <div class="form-group">
-                            <label style="color: white;">邮箱/账号</label>
+                            <label>邮箱/账号</label>
                                 <input autofocus="autofocus" data-validate="required" maxlength="120" name="email"
                                     type="text" value="" class="required" placeholder="you@example.com">
                         </div> 
                         <div class="form-group">
-                                <label  style="color: white;">密码</label>
+                                <label>密码</label>
                                 <input class="required" data-clear-button="false" data-role="input"
                                 data-validate="required pattern=^\w{6,10}$ custom=validateEmailAndPwd"
                                 maxlength="10" name="password" type="password" value=""
@@ -36,11 +36,11 @@
                                 placeholder="密码应由 6- 10 位数字、字母、下划线组成"/>
                         </div>
                          <div class="form-group">
-                            <label  style="color: white;">登录名</label>
+                            <label>登录名</label>
                             <input class="required" max_length="120" name="login" placeholder="选填" type="text" value="">
                         </div>
                         <div class="form-group">
-                            <label  style="color: white;">昵称</label>
+                            <label>昵称</label>
                             <input class="required" max_length="120" name="name" placeholder="选填" type="text" value="">
                         </div>
                         <div class="form-group">
