--- a/src/views/projectTopNav.html
+++ b/src/views/projectTopNav.html
@@ -17,5 +17,17 @@
         <a id="prj-mem" href="./projectMemberList">项目成员</a>
         <a>项目设置</a>
     </div>
+	<div class="projectsetting">
+		<form action="">
+			<div>
+			<p1>1.填写项目名称</p1><br>
+			<input type="text" class="upload-pjname" placeholder="项目名称">
+			</div>
+			<div margin=10px>
+			<p2>2.上传项目封面（选填，但只能添加不大于2M的图片）</p2><br>
+			<input type="file" class="upload-pjcover" accept="image/*" name="file" id="file"/>
+			</div>
+		</form>
+	</div>
 </body>
 </html>
