修复元素宽度不匹配的问题

--- a/src/static/css/projectNotice.css
+++ b/src/static/css/projectNotice.css
@@ -5,7 +5,7 @@ body {
 
 .container {
     height: 60%;
-    width: 100%;
+    width: 1200px;
     padding-left: 150px;
     padding-top: 150px;
     /* background-color: #dddddd; */
