fixes #142 add invest button

--- a/src/views/projectTopNav.html
+++ b/src/views/projectTopNav.html
@@ -11,6 +11,7 @@
     </div>
     <div class="navigation">
         <img src="../static/img/projectbg.png">
+        <button type="button" class="invest" onclick="">投资</button>
         <div class="prj-name">KCoin</div>
         <a class="first" id="prj-info" href="./projectInfo">项目详情</a>
         <a id="proj-notice" href="./projectNotice">项目动态</a>
