fixes #142 add link to ProjectInfo in Homepage

--- a/src/static/css/homepage.css
+++ b/src/static/css/homepage.css
@@ -4,6 +4,20 @@
 body {
 	margin: 0;
 }
+
+a:link,a:visited,a:active
+{
+    color: #1B1B1B;
+    text-decoration:none;
+}
+
+a:hover{
+	color: #1B1B1B;
+	text-decoration:none;
+	border: 2px;
+	border-color: blue;
+}
+
 .header {
 	background-size: cover;
 	background-image: url("../img/bg2.png");
