--- a/src/views/projectNotice.html
+++ b/src/views/projectNotice.html
@@ -15,11 +15,15 @@
 
     <div class="container">
         <ul class="time-vertical">
-            <li><b></b><span>08.08</span><a href="javascript:void(0)">贡献规则发生变更：每次提交可以获得100个token</a>
-            </li>
-            <li><b></b><span>05.08</span><a href="javascript:void(0)">每次提交可以获得50个token</a></li>
-            <li><b></b><span>03.08</span><a href="javascript:void(0)">博客园</a></li>
-            <li><b></b><span>01.08</span><a href="javascript:void(0)">创业</a></li>
+            <p class="yearNode">
+                <span style="color: #fff; font-size: 25px;">2012</span>
+            </p>
+            <div><b></b><span>08.08</span>
+                <a href="javascript:void(0)">贡献规则发生变更：每次提交可以获得100个token</a>
+            </div>
+            <div><b></b><span>05.08</span><a href="javascript:void(0)">每次提交可以获得50个token</a></div>
+            <div><b></b><span>03.08</span><a href="javascript:void(0)">博客园</a></div>
+            <div><b></b><span>01.08</span><a href="javascript:void(0)">创业</a></div>
         </ul>
     </div>
 
