--- a/src/views/projectTopNav.html
+++ b/src/views/projectTopNav.html
@@ -15,7 +15,7 @@
         <a class="first" id="prj-info" href="./projectInfo">项目详情</a>
         <a id="proj-notice" href="./projectNotice">项目动态</a>
         <a id="prj-mem" href="./projectMemberList">项目成员</a>
-        <a>项目设置</a>
+        <a id="prj-set" href="./projectSetting">项目设置</a>
     </div>
 </body>
 </html>
