--- a/src/views/personalProjects.html
+++ b/src/views/personalProjects.html
@@ -49,6 +49,7 @@
                 <p>test</p>
                 <p>{{.test_projectUrl}}</p>
                 <p>{{.test_projectName}}</p>
+                <p>{{.test_filename}}</p>
             </div>  
         </div>
     </div>
