--- a/src/views/projectTopNav.html
+++ b/src/views/projectTopNav.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <div class="head">
-
+        <a href="./homepage">
+            <img class="topNavLogo" src="../static/img/kcoin-logo-blue.png"/>
+            <div class="topNavName">KCOIN</div>
+        </a>
     </div>
     <div class="navigation">
         <img src="../static/img/projectbg.png">
