--- a/src/views/projectTopNav.html
+++ b/src/views/projectTopNav.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Kcoin</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/projectInfo.css"/>
+    <link rel="stylesheet" type="text/css" href="../static/css/projectTopNav.css"/>
 </head>
 <body>
     <div class="head">
